使用 Colaboratory 建立

--- a/周宸妘_Week13_作業習題.ipynb
+++ b/周宸妘_Week13_作業習題.ipynb
@@ -2,6 +2,11 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "colab": {
+      "name": "周宸妘 - Week13 - 作業習題.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -18,11 +23,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.5"
-    },
-    "colab": {
-      "name": "周宸妘 - Week13 - 作業習題.ipynb",
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "cells": [
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VqTYySJgztvT",
-        "outputId": "383c0a5a-bf26-4250-940a-78f44581680f"
+        "outputId": "2a823b0e-3dd5-4152-f557-0cb97d64e7d8"
       },
       "source": [
         "w = float(input('請輸入體重(KG)?'))\n",
@@ -72,7 +72,7 @@
         "else:\n",
         "    print('體重肥胖')"
       ],
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "drD-DXmTztvU",
-        "outputId": "026eb6b7-903a-4ed5-906e-35e3fb5943bd"
+        "outputId": "39af8180-c4c9-4389-a2f2-352ee803b7d4"
       },
       "source": [
         "# 方法一：單向選擇\n",
@@ -138,7 +138,7 @@
         "    print(\"Your number is zero.\")\n",
         "print(\"Finished\")"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gRfpTUFNztvV",
-        "outputId": "f82e5e00-3173-46f8-f5d9-4a2291b8ff46"
+        "outputId": "74078e45-9f6a-4fb2-ea94-8588a6663c21"
       },
       "source": [
         "體溫 = float(input('輸入體溫'))\n",
@@ -194,15 +194,16 @@
         "elif 體溫 < 39:\n",
         "    print('體溫有點燒')\n",
         "else:\n",
-        "    print('體溫很燒')"
+        "    print('體溫很燒')\n",
+        "    "
       ],
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "輸入體溫36\n",
-            "體重正常\n"
+            "輸入體溫38\n",
+            "體溫有點燒\n"
           ],
           "name": "stdout"
         }
@@ -234,7 +235,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nUJmGMbtztvW",
-        "outputId": "6ebaedb2-fdc4-496e-85d7-762defc4bbcf"
+        "outputId": "585ddb70-fc62-4d06-94b6-6fc4a53e1909"
       },
       "source": [
         "年份 = int(input('西元幾年？'))\n",
@@ -251,7 +252,7 @@
         "\n",
         "print(answer)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,10 +282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8_rW9WSwztvX",
-        "outputId": "8eb16cc5-bb1c-4ece-8c14-2800d0d44d67"
+        "outputId": "4b502014-d5ec-4202-f519-2b1b789bf77a"
       },
       "source": [
-        "\n",
         "里程數 = int(input('總里程數(KM)'))\n",
         "if 里程數 <= 3:\n",
         "    money = 6 \n",
@@ -295,7 +295,7 @@
         "        money = 6 + 7 * 1.8 + (里程數 - 10) * 1.8 * 1.5\n",
         "print(\"金額 =\", money)"
       ],
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
