使用 Colaboratory 建立

--- a/周宸妘_week_15.ipynb
+++ b/周宸妘_week_15.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "周宸妘 week 15.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzYOGmxaVU8FjQEJOcN648",
+      "authorship_tag": "ABX9TyPF5Dof74qtV/vlz9xGAjL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sozfbROVsAh0",
-        "outputId": "dbab932b-4f08-4614-a17b-768bd3ac6d3c"
+        "outputId": "03703396-2dca-4a71-f845-79f954b2fc0e"
       },
       "source": [
         "yourchoice = int(input(\"請出拳 [0] 蟲 [1] 雞 [2] 老虎 [3] 棒子\"))\n",
@@ -49,17 +49,45 @@
         "else:\n",
         "    print(\"平手\")"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "請出拳 [0] 蟲 [1] 雞 [2] 老虎 [3] 棒子1\n",
-            "你出的拳: 1\n",
-            "電腦出拳為 0\n",
-            "我贏了\n"
+            "請出拳 [0] 蟲 [1] 雞 [2] 老虎 [3] 棒子2\n",
+            "你出的拳: 2\n",
+            "電腦出拳為 3\n",
+            "電腦贏了\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jKsjymsMMy07",
+        "outputId": "46b98c8e-9b5a-480c-ea9c-a1ae24e5c0ff"
+      },
+      "source": [
+        "1"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     }
